--- a/Newsletterfall20252.html
+++ b/Newsletterfall20252.html
@@ -1,5 +1,4 @@
-index.html
-<!DOCTYPE html>
+<!DOCTYPE index.html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -538,3 +537,4 @@ index.html
 </body>
 
 </html>
+
