--- a/Newsletterfall20252.html
+++ b/Newsletterfall20252.html
@@ -1,4 +1,4 @@
-<!DOCTYPE index.html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -537,4 +537,5 @@
 </body>
 
 </html>
+
 
